Improvements in json converter.